...
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/roboto_thin"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/profileBtn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/btn_rounded"
                android:fontFamily="@font/roboto_thin"
                android:onClick="profileButtonClicked"
...
